--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -264,6 +264,12 @@ services:
     - MYSQL_PORT=3306
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=netcoreapp2.1
+    - DD_ENV
+    - DD_DOTNET_TRACER_HOME
+    - DD_INTEGRATIONS
+    - CORECLR_ENABLE_PROFILING
+    - CORECLR_PROFILER
+    - CORECLR_PROFILER_PATH_64
     depends_on:
     - servicestackredis
     - stackexchangeredis
@@ -294,6 +300,12 @@ services:
     - MYSQL_PORT=3306
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=netcoreapp3.0
+    - DD_ENV
+    - DD_DOTNET_TRACER_HOME
+    - DD_INTEGRATIONS
+    - CORECLR_ENABLE_PROFILING
+    - CORECLR_PROFILER
+    - CORECLR_PROFILER_PATH_64
     depends_on:
     - servicestackredis
     - stackexchangeredis
@@ -324,6 +336,12 @@ services:
     - MYSQL_PORT=3306
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=netcoreapp3.1
+    - DD_ENV
+    - DD_DOTNET_TRACER_HOME
+    - DD_INTEGRATIONS
+    - CORECLR_ENABLE_PROFILING
+    - CORECLR_PROFILER
+    - CORECLR_PROFILER_PATH_64
     depends_on:
     - servicestackredis
     - stackexchangeredis
