Adding DD_API_KEY to docker compose env vars.

--- a/.azure-pipelines/integration-tests.yml
+++ b/.azure-pipelines/integration-tests.yml
@@ -130,6 +130,7 @@ jobs:
       dockerComposeCommand: run -e TestAllPackageVersions=true -e buildConfiguration=$(buildConfiguration) -e publishTargetFramework=$(publishTargetFramework) build
     env:
       DD_SERVICE_NAME: $(Build.DefinitionName)-$(Agent.JobName)-dd-tracer-dotnet
+      DD_API_KEY: $(ddApiKey)
 
   - task: DockerCompose@0
     displayName: docker-compose run IntegrationTests
@@ -138,6 +139,7 @@ jobs:
       dockerComposeCommand: run -e TestAllPackageVersions=true -e buildConfiguration=$(buildConfiguration) -e publishTargetFramework=$(publishTargetFramework) IntegrationTests
     env:
       DD_SERVICE_NAME: $(Build.DefinitionName)-$(Agent.JobName)-dd-tracer-dotnet
+      DD_API_KEY: $(ddApiKey)
 
   - task: PublishTestResults@2
     displayName: publish test results
@@ -235,6 +237,7 @@ jobs:
       dockerComposeCommand: run -e TestAllPackageVersions=true -e buildConfiguration=$(buildConfiguration) -e publishTargetFramework=$(publishTargetFramework) build
     env:
       DD_SERVICE_NAME: $(Build.DefinitionName)-$(Agent.JobName)-dd-tracer-dotnet
+      DD_API_KEY: $(ddApiKey)
 
   - task: DockerCompose@0
     displayName: docker-compose run IntegrationTests.Alpine.Core21
@@ -244,6 +247,7 @@ jobs:
       dockerComposeCommand: run -e TestAllPackageVersions=true -e buildConfiguration=$(buildConfiguration) IntegrationTests.Alpine.Core21
     env:
       DD_SERVICE_NAME: $(Build.DefinitionName)-$(Agent.JobName)-dd-tracer-dotnet
+      DD_API_KEY: $(ddApiKey)
 
   - task: DockerCompose@0
     displayName: docker-compose run IntegrationTests.Alpine.Core30
@@ -253,6 +257,7 @@ jobs:
       dockerComposeCommand: run -e TestAllPackageVersions=true -e buildConfiguration=$(buildConfiguration) IntegrationTests.Alpine.Core30
     env:
       DD_SERVICE_NAME: $(Build.DefinitionName)-$(Agent.JobName)-dd-tracer-dotnet
+      DD_API_KEY: $(ddApiKey)
 
   - task: DockerCompose@0
     displayName: docker-compose run IntegrationTests.Alpine.Core31
@@ -262,6 +267,7 @@ jobs:
       dockerComposeCommand: run -e TestAllPackageVersions=true -e buildConfiguration=$(buildConfiguration) IntegrationTests.Alpine.Core31
     env:
       DD_SERVICE_NAME: $(Build.DefinitionName)-$(Agent.JobName)-dd-tracer-dotnet
+      DD_API_KEY: $(ddApiKey)
 
   - task: PublishTestResults@2
     displayName: publish test results
@@ -284,7 +290,6 @@ jobs:
 
   variables:
     msiOutputDirectory: deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/bin/$(buildConfiguration)/$(buildPlatform)/en-us
-    DD_DOTNET_TRACER_MSBUILD:
 
   # Enable the Datadog Agent service for this job
   services:
