update step display names

--- a/.azure-pipelines/integration-tests.yml
+++ b/.azure-pipelines/integration-tests.yml
@@ -30,7 +30,7 @@ jobs:
 
   steps:
   - task: UseDotNet@2
-    displayName: install dotnet core sdk
+    displayName: install dotnet core sdk 3.1
     inputs:
       version: $(dotnetCoreSdkVersion)
 
@@ -107,7 +107,7 @@ jobs:
 
   steps:
   - task: UseDotNet@2
-    displayName: install dotnet core sdk
+    displayName: install dotnet core sdk 3.1
     inputs:
       version: $(dotnetCoreSdkVersion)
 
