--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,6 +88,15 @@ services:
     - DD_DOTNET_TRACER_MSBUILD
     - DD_SERVICE_NAME
     - DD_TRACE_AGENT_URL=http://dd-agent:8126
+    - BUILD_REPOSITORY_URI
+    - BUILD_SOURCEVERSION
+    - BUILD_SOURCESDIRECTORY
+    - BUILD_BUILDID
+    - BUILD_BUILDNUMBER
+    - SYSTEM_TEAMFOUNDATIONCOLLECTIONURI
+    - SYSTEM_TEAMPROJECT
+    - SYSTEM_PULLREQUEST_SOURCEBRANCH
+    - SYSTEM_PULLREQUEST_SOURCECOMMIT
     depends_on: 
     - dd-agent
     command: /project/docker/build.sh
@@ -278,6 +287,15 @@ services:
     - DD_DOTNET_TRACER_MSBUILD
     - DD_SERVICE_NAME
     - DD_TRACE_AGENT_URL=http://dd-agent:8126
+    - BUILD_REPOSITORY_URI
+    - BUILD_SOURCEVERSION
+    - BUILD_SOURCESDIRECTORY
+    - BUILD_BUILDID
+    - BUILD_BUILDNUMBER
+    - SYSTEM_TEAMFOUNDATIONCOLLECTIONURI
+    - SYSTEM_TEAMPROJECT
+    - SYSTEM_PULLREQUEST_SOURCEBRANCH
+    - SYSTEM_PULLREQUEST_SOURCECOMMIT
     depends_on:
     - dd-agent
     - servicestackredis
@@ -313,6 +331,15 @@ services:
     - DD_DOTNET_TRACER_MSBUILD
     - DD_SERVICE_NAME
     - DD_TRACE_AGENT_URL=http://dd-agent:8126
+    - BUILD_REPOSITORY_URI
+    - BUILD_SOURCEVERSION
+    - BUILD_SOURCESDIRECTORY
+    - BUILD_BUILDID
+    - BUILD_BUILDNUMBER
+    - SYSTEM_TEAMFOUNDATIONCOLLECTIONURI
+    - SYSTEM_TEAMPROJECT
+    - SYSTEM_PULLREQUEST_SOURCEBRANCH
+    - SYSTEM_PULLREQUEST_SOURCECOMMIT
     depends_on:
     - dd-agent
     - servicestackredis
@@ -348,6 +375,15 @@ services:
     - DD_DOTNET_TRACER_MSBUILD
     - DD_SERVICE_NAME
     - DD_TRACE_AGENT_URL=http://dd-agent:8126
+    - BUILD_REPOSITORY_URI
+    - BUILD_SOURCEVERSION
+    - BUILD_SOURCESDIRECTORY
+    - BUILD_BUILDID
+    - BUILD_BUILDNUMBER
+    - SYSTEM_TEAMFOUNDATIONCOLLECTIONURI
+    - SYSTEM_TEAMPROJECT
+    - SYSTEM_PULLREQUEST_SOURCEBRANCH
+    - SYSTEM_PULLREQUEST_SOURCECOMMIT
     depends_on:
     - dd-agent
     - servicestackredis
@@ -383,6 +419,15 @@ services:
     - DD_DOTNET_TRACER_MSBUILD
     - DD_SERVICE_NAME
     - DD_TRACE_AGENT_URL=http://dd-agent:8126
+    - BUILD_REPOSITORY_URI
+    - BUILD_SOURCEVERSION
+    - BUILD_SOURCESDIRECTORY
+    - BUILD_BUILDID
+    - BUILD_BUILDNUMBER
+    - SYSTEM_TEAMFOUNDATIONCOLLECTIONURI
+    - SYSTEM_TEAMPROJECT
+    - SYSTEM_PULLREQUEST_SOURCEBRANCH
+    - SYSTEM_PULLREQUEST_SOURCECOMMIT
     depends_on:
     - dd-agent
     - servicestackredis
