--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,6 +88,7 @@ services:
     - DD_DOTNET_TRACER_MSBUILD
     - DD_SERVICE_NAME
     - DD_TRACE_AGENT_URL=http://dd-agent:8126
+    - TF_BUILD
     - BUILD_REPOSITORY_URI
     - BUILD_SOURCEVERSION
     - BUILD_SOURCESDIRECTORY
@@ -287,6 +288,7 @@ services:
     - DD_DOTNET_TRACER_MSBUILD
     - DD_SERVICE_NAME
     - DD_TRACE_AGENT_URL=http://dd-agent:8126
+    - TF_BUILD
     - BUILD_REPOSITORY_URI
     - BUILD_SOURCEVERSION
     - BUILD_SOURCESDIRECTORY
@@ -331,6 +333,7 @@ services:
     - DD_DOTNET_TRACER_MSBUILD
     - DD_SERVICE_NAME
     - DD_TRACE_AGENT_URL=http://dd-agent:8126
+    - TF_BUILD
     - BUILD_REPOSITORY_URI
     - BUILD_SOURCEVERSION
     - BUILD_SOURCESDIRECTORY
@@ -375,6 +378,7 @@ services:
     - DD_DOTNET_TRACER_MSBUILD
     - DD_SERVICE_NAME
     - DD_TRACE_AGENT_URL=http://dd-agent:8126
+    - TF_BUILD
     - BUILD_REPOSITORY_URI
     - BUILD_SOURCEVERSION
     - BUILD_SOURCESDIRECTORY
@@ -419,6 +423,7 @@ services:
     - DD_DOTNET_TRACER_MSBUILD
     - DD_SERVICE_NAME
     - DD_TRACE_AGENT_URL=http://dd-agent:8126
+    - TF_BUILD
     - BUILD_REPOSITORY_URI
     - BUILD_SOURCEVERSION
     - BUILD_SOURCESDIRECTORY
