--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -420,7 +420,17 @@ services:
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=${publishTargetFramework}
     - DD_ENV
+    - DD_DOTNET_TRACER_HOME
     - DD_DOTNET_TRACER_MSBUILD
+    - DD_INTEGRATIONS
+    - CORECLR_ENABLE_PROFILING
+    - CORECLR_PROFILER
+    - CORECLR_PROFILER_PATH_32
+    - CORECLR_PROFILER_PATH_64
+    - COR_ENABLE_PROFILING
+    - COR_PROFILER
+    - COR_PROFILER_PATH_32
+    - COR_PROFILER_PATH_64
     - DD_SERVICE_NAME
     - DD_TRACE_AGENT_URL=http://dd-agent:8126
     - TF_BUILD
