--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -27,7 +27,16 @@ resources:
       DD_HOSTNAME: none
       DD_APM_ENABLED: true
       DD_APM_NON_LOCAL_TRAFFIC: true
-  - container: dd_agent_dev
+  - container: dd_agent_dev_windows
+    image: datadog/agent-dev:olivielpeau-image-allow-disabling-system-checks-py3-win1809
+    ports:
+    - 8126:8126
+    env:
+      DD_API_KEY: $(ddApiKey)
+      DD_REMOVE_DEFAULT_CHECKS: true
+      DD_APM_ENABLED: true
+      DD_APM_NON_LOCAL_TRAFFIC: true
+  - container: dd_agent_dev_linux
     image: datadog/agent-dev:olivielpeau-image-allow-disabling-system-checks-py3
     ports:
     - 8126:8126
@@ -45,10 +54,10 @@ jobs:
     matrix:
       windows:
         imageName: windows-2019
-        serviceName: dd_agent
+        serviceName: dd_agent_dev_windows
       linux:
         imageName: ubuntu-18.04
-        serviceName: dd_agent_dev
+        serviceName: dd_agent_dev_linux
 
   pool:
     vmImage: $(imageName)
