Configure the benchmarks project for micro-benchmarks (#859)
* Configure project for microbenchmarks

- Added to the minimal solution
- Added a microbenchmarks folder with gitignore file

--- a/benchmarks/Benchmarks.Trace/Benchmarks.Trace.csproj
+++ b/benchmarks/Benchmarks.Trace/Benchmarks.Trace.csproj
@@ -30,4 +30,8 @@
     <PackageReference Include="Microsoft.Win32.Registry" Version="4.6.0" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="microbenchmarks\.gitignore" />
+  </ItemGroup>
+
 </Project>
