--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -28,7 +28,7 @@ resources:
       DD_APM_ENABLED: true
       DD_APM_NON_LOCAL_TRAFFIC: true
   - container: dd_agent_dev_windows
-    image: datadog/agent-dev:master-py3-win1909
+    image: datadog/agent-dev:master-py3-win
     ports:
     - 8126:8126
     env:
