--- a/.azure-pipelines/benchmarks.yml
+++ b/.azure-pipelines/benchmarks.yml
@@ -71,6 +71,7 @@ stages:
         command: 'run'
         projects: '$(System.DefaultWorkingDirectory)/benchmarks/Benchmarks.Trace/Benchmarks.Trace.csproj'
         arguments: '-c Release -f netcoreapp3.1 -- -i -m -f * '
-    - task: Delay@1
+    - task: PowerShell@2
       inputs:
-        delayForMinutes: '5'
+        targetType: 'inline'
+        script: 'Start-Sleep -s 120'
