--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,8 +3,10 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-trigger: none
-pr: none
+trigger:
+- master
+pr:
+- master
 
 pool:
   vmImage: 'ubuntu-latest'
