Make sure to build the benchmarks when validating the code

--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -52,6 +52,7 @@ jobs:
       projects: |
         src/**/*.csproj
         test/**/*.Tests.csproj
+        benchmarks/**/*.csproj
 
   - task: DotNetCoreCLI@2
     displayName: dotnet test
