--- a/.azure-pipelines/packages.yml
+++ b/.azure-pipelines/packages.yml
@@ -206,7 +206,7 @@ stages:
 
     - script: |
         INDEX_FILE=$(pwd)/s3_upload/index.txt
-        echo $(GitVersion.BranchName) >> $INDEX_FILE
+        git rev-parse --abbrev-ref HEAD >> $INDEX_FILE
         echo $(GitVersion.Sha) >> $INDEX_FILE
         pushd s3_upload && name=$(ls *.deb) && echo "${name::-9}*" >> $INDEX_FILE && popd
         git show -s --format='%ae' $(GitVersion.Sha) >> $INDEX_FILE
